--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -79,8 +79,7 @@ jobs:
       - name: debug
         shell: bash
         run: |
-          ls -lh /usr/lib/x86_64-linux-gnu/
-          sudo apt install vulkan-sdk
+          sudo apt install glibc glibc-doc
 
       # - name: Build wheels
       #   if: matrix.os == 'ubuntu-20.04'
