--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -76,10 +76,10 @@ jobs:
           wget https://sdk.lunarg.com/sdk/download/1.2.189.0/linux/vulkansdk-linux-x86_64-1.2.189.0.tar.gz?Human=true -O vulkansdk-linux-x86_64-1.2.189.0.tar.gz
           tar -xf vulkansdk-linux-x86_64-1.2.189.0.tar.gz
 
-      - name: debug
-        shell: bash
-        run: |
-          sudo apt install glibc-doc
+      # - name: debug
+      #   shell: bash
+      #   run: |
+      #     sudo apt install glibc-doc
 
       - name: Build wheels
         if: matrix.os == 'ubuntu-20.04'
@@ -91,7 +91,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=FALSE VULKAN_SDK=/project/ncnn-python-gpu/1.2.189.0/x86_64 
-          # CIBW_BEFORE_BUILD: cd /project/ncnn-python-gpu/&&ls&&echo ""&&cd /project/ncnn-python-gpu/1.2.189.0/x86_64&&ls&&echo ""
+          CIBW_BEFORE_BUILD: sudo apt install build-essential
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
