--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -81,8 +81,9 @@ jobs:
       #   run: |
       #     sudo apt install glibc-doc
 
+      # ubuntu-20.04 
       - name: Build wheels
-        if: matrix.os == 'ubuntu-20.04'
+        if: matrix.os == 'ubuntu-20.04' && matrix.build != 'cp*-musllinux*'
         uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
@@ -91,7 +92,22 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=FALSE VULKAN_SDK=/project/ncnn-python-gpu/1.2.189.0/x86_64 
-          CIBW_BEFORE_ALL_LINUX: apk add build-essential
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
+
+      # ubuntu-20.04 musllinux
+      - name: Build wheels
+        if: matrix.os == 'ubuntu-20.04' && matrix.build == 'cp*-musllinux*'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=FALSE VULKAN_SDK=/project/ncnn-python-gpu/1.2.189.0/x86_64 
+          CIBW_BEFORE_ALL_LINUX: apk add build-base
           # CIBW_BEFORE_ALL: apt install build-essential
         with:
           package-dir: ./ncnn-python-gpu
