--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -78,7 +78,7 @@ jobs:
           sudo apt update
           sudo apt install vulkan-sdk
       
-      - id: verify-vulkan for windows amd64 and macos x86_64
+      - id: verify vulkan for windows amd64 and macos x86_64
         if: (matrix.os == 'windows-2019' && matrix.arch == 'AMD64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'x86_64')
         name: Verify Vulkan SDK Install
