--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -80,15 +80,17 @@ jobs:
       
       - id: verify-vulkan
         if: (matrix.os == 'windows-2019' && matrix.arch == 'AMD64') || 
-            (matrix.os == 'macos-latest' && matrix.arch == 'x86_64')
-        name: verify vulkan sdk install for windows amd64 and macos x86_64
+            (matrix.os == 'macos-latest' && matrix.arch == 'x86_64') ||
+            (matrix.os == 'ubuntu-20.04' && matrix.arch == 'i686')
+        name: verify vulkan sdk install for windows amd64 and macos x86_64 and ubuntu i686
         shell: bash
         run: |
-          echo "Vulkan_SDK_Version='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
+          echo "VULKAN_SDK_VERSION='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
           echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_OUTPUT"
 
-      - name: Build wheels for ubuntu-20.04 manylinux
-        if: matrix.os == 'ubuntu-20.04' && matrix.build != 'cp*-musllinux*'
+      - name: Build wheels for ubuntu-20.04 manylinux except i686
+        if: matrix.os == 'ubuntu-20.04' && matrix.build != 'cp*-musllinux*' &&
+            matrix.arch != 'i686'
         uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
@@ -97,6 +99,21 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/ncnn-python-gpu/1.2.189.0/x86_64 
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
+
+      - name: Build wheels for ubuntu-20.04 manylinux i686
+        if: matrix.os == 'ubuntu-20.04' && matrix.build != 'cp*-musllinux*' &&
+            matrix.arch == 'i686'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE 
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
