--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -103,12 +103,8 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
-          CIBW_BEFORE_ALL_LINUX: apt install wget &&
-                                 wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add - &&
-                                 wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list &&
-                                 apt update &&
-                                 apt install vulkan-sdk
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE
+          CIBW_BEFORE_ALL_LINUX: yum install -y vulkan
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
