--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -16,18 +16,18 @@ jobs:
       matrix:
         include:
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
-          # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' } # check if gpu (only cpu now)
+          # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' } # (only cpu now)
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
-          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } # replace vulkan for i686
-          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } # replace vulkan for i686 check if gpu  (only cpu now)
-          # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } # replace vulkan for i686
-          # - { os: windows-2019, arch: x86,        build: 'cp*'            } # replace vulkan for 32
+          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } # (only cpu now)
+          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } # (only cpu now)
+          # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } # (only cpu now)
+          # - { os: windows-2019, arch: x86,        build: 'cp*'            } # (only cpu now)
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
-          # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } # replace vulkan for arm64
+          # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } # (only cpu now)
           # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          # - { os: macos-latest, arch: arm64,      build: 'cp*'            } # replace vulkan for arm64
+          - { os: macos-latest, arch: arm64,      build: 'cp*'            } # replace vulkan for arm64
           # - { os: macos-latest, arch: universal2, build: 'cp*'            } # replace vulkan for universal2
 
     steps:
@@ -93,7 +93,7 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for ubuntu-20.04 manylinux i686
+      - name: Build wheels for ubuntu-20.04 manylinux i686  - cpu only now
         if: matrix.os == 'ubuntu-20.04' && matrix.build != 'cp*-musllinux*' &&
             matrix.arch == 'i686'
         uses: pypa/cibuildwheel@v2.15.0
@@ -103,8 +103,7 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE
-          CIBW_BEFORE_ALL_LINUX: yum install -y vulkan
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=FALSE
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
@@ -119,7 +118,6 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=FALSE VULKAN_SDK=/project/ncnn-python-gpu/1.2.189.0/x86_64 
-          # CIBW_BEFORE_ALL_LINUX: apk add libc6-compat
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
@@ -135,7 +133,36 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
-          # CIBW_BEFORE_BUILD: cd VULKAN_SDK&&ls&&echo ""
+        with:
+          package-dir: ncnn-python-gpu
+          output-dir: wheelhouse
+
+      - name: Build wheels for windows x86 and windows arm64 - cpu only now
+        if: (matrix.os == 'windows-2019' && matrix.arch == 'x86') || 
+            (matrix.os == 'windows-2019' && matrix.arch == 'ARM64')
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=FALSE
+        with:
+          package-dir: ncnn-python-gpu
+          output-dir: wheelhouse
+
+      - name: Build wheels for macos arm64 and macos universal2
+        if: (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
+            (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
         with:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
