--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -80,7 +80,9 @@ jobs:
 
       - id: verify-vulkan
         if: (matrix.os == 'windows-2019' && matrix.arch == 'AMD64') || 
-            (matrix.os == 'macos-latest' && matrix.arch == 'x86_64')
+            (matrix.os == 'macos-latest' && matrix.arch == 'x86_64') ||
+            (matrix.os == 'macos-latest' && matrix.arch == 'arm64') ||
+            (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
         name: verify vulkan sdk install for windows amd64 and macos x86_64 and ubuntu i686
         shell: bash
         run: |
