--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -109,7 +109,7 @@ jobs:
       - id: verify-vulkan
         if: (matrix.os == 'windows-2019' && matrix.arch == 'AMD64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'x86_64') 
-        name: verify vulkan sdk install for windows amd64 and macos x86_64 and ubuntu i686
+        name: verify vulkan sdk install for windows amd64 and macos x86_64
         shell: bash
         run: |
           echo "VULKAN_SDK_VERSION='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
