--- a/.github/workflows/test-without-libvulkan.yml
+++ b/.github/workflows/test-without-libvulkan.yml
@@ -55,6 +55,8 @@ jobs:
 
       - name: test del libvulkan
         run: |
+          sudo find /usr/lib /usr/lib64 -name libvulkan.so*
           sudo apt install libvulkan1
+          sudo find /usr/lib /usr/lib64 -name libvulkan.so*
           python tests/test_del_libvk.py
       
