--- a/.github/workflows/test-without-libvulkan.yml
+++ b/.github/workflows/test-without-libvulkan.yml
@@ -17,7 +17,7 @@ jobs:
         include:
           - { os: ubuntu-20.04}
           - { os: windows-2019}
-          # - { os: macos-latest}
+          - { os: macos-latest}
 
     steps:
       - uses: actions/checkout@v3
